--- a/Proektik/src/main/resources/templates/movies/index.html
+++ b/Proektik/src/main/resources/templates/movies/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div th:insert="fragments/header :: headerMain"></div>
+<a href="/user/">Панель админа</a>
+
 
 <h1>КИНО</h1>
 <a href="/movies/add" class="btn btn-dark">Добавить фильм</a>
